SERVER-99569 Validate partitionBy and sortBy in $fill (#32252)

GitOrigin-RevId: 17057ba86b4ed0079424c6456092a40ef8b72676