src/mongo/db/pipeline/document_source_fill.cpp
@@ -78,7 +78,6 @@ std::list<boost::intrusive_ptr<DocumentSource>> createFromBson(
             elem.type() == BSONType::Object);
 
     auto spec = FillSpec::parse(IDLParserContext(kStageName), elem.embeddedObject());
-    std::list<boost::intrusive_ptr<DocumentSource>> outputPipeline;
     BSONObjBuilder setWindowFieldsSpec;
 
     // Output object is not optional. Check output field first to maybe skip building the rest of
@@ -127,7 +126,16 @@ std::list<boost::intrusive_ptr<DocumentSource>> createFromBson(
 
     // Generate sortPattern for $setWindowFields
     if (auto&& sortBy = spec.getSortBy()) {
-        setWindowFieldsSpec.append("sortBy", sortBy.value());
+        if (needSetWindowFields) {
+            setWindowFieldsSpec.append("sortBy", sortBy.value());
+        } else {
+            // sortBy is only required when an output method is used.
+            // In the case where a constant value is used for the output
+            // the sortBy will be ignored during the rewrite and subsequently
+            // never parsed or evaluated. This means we need to perform the parsing
+            // in the $fill stage to ensure no invalid values are present.
+            SortPattern(*sortBy, pExpCtx);
+        }
     }
 
     if (auto&& partitionByUnparsedExpr = spec.getPartitionBy()) {
@@ -136,9 +144,26 @@ std::list<boost::intrusive_ptr<DocumentSource>> createFromBson(
                 !spec.getPartitionByFields());
         auto partitionByField = partitionByUnparsedExpr.value();
         if (std::string* partitionByString = get_if<std::string>(&partitionByField)) {
-            setWindowFieldsSpec.append("partitionBy", *partitionByString);
-        } else
-            setWindowFieldsSpec.append("partitionBy", get<BSONObj>(partitionByField));
+            if (needSetWindowFields) {
+                setWindowFieldsSpec.append("partitionBy", *partitionByString);
+            } else {
+                ExpressionFieldPath::parse(
+                    pExpCtx.get(), *partitionByString, pExpCtx->variablesParseState);
+            }
+        } else {
+            auto&& partitionByMethod = get<BSONObj>(partitionByField);
+            if (needSetWindowFields) {
+                setWindowFieldsSpec.append("partitionBy", partitionByMethod);
+            } else {
+                // A partitionBy expression will be ignored during the rewrite if the output is not
+                // a method. In that case, the partitionBy expression is never parsed or evaluated,
+                // which would allow invalid expressions to go undetected.
+                // Therefore, we explicitly parse the partitionBy expression in the $fill stage
+                // to ensure that any bogus values are caught early.
+                Expression::parseObject(
+                    pExpCtx.get(), partitionByMethod, pExpCtx->variablesParseState);
+            }
+        }
     }
 
     if (auto&& partitionByFields = spec.getPartitionByFields()) {
@@ -146,7 +171,8 @@ std::list<boost::intrusive_ptr<DocumentSource>> createFromBson(
         for (const auto& fieldName : partitionByFields.value()) {
             partitionBySpec.setNestedField(fieldName, Value("$" + fieldName));
         }
-        setWindowFieldsSpec.append("partitionBy", partitionBySpec.freeze().toBson());
+        if (needSetWindowFields)
+            setWindowFieldsSpec.append("partitionBy", partitionBySpec.freeze().toBson());
     }
 
     std::list<boost::intrusive_ptr<DocumentSource>> finalSources;
@@ -160,7 +186,6 @@ std::list<boost::intrusive_ptr<DocumentSource>> createFromBson(
         finalSources.push_back(
             DocumentSourceAddFields::create(std::move(finalAddFieldsSpec), pExpCtx, "$addFields"));
     }
-
 
     return finalSources;
 }
