src/mongo/db/pipeline/document_source_set_window_fields.cpp
@@ -240,7 +240,8 @@ list<intrusive_ptr<DocumentSource>> document_source_set_window_fields::create(
             // Partitioning by a constant, non-array expression is equivalent to not partitioning
             // (putting everything in the same partition).
         } else if (auto exprFieldPath = dynamic_cast<ExpressionFieldPath*>(partitionBy->get());
-                   exprFieldPath && !exprFieldPath->isVariableReference()) {
+                   exprFieldPath && !exprFieldPath->isVariableReference() &&
+                   !exprFieldPath->isROOT()) {
             // ExpressionFieldPath has "CURRENT" as an explicit first component,
             // but for $sort we don't want that.
             simplePartitionBy = exprFieldPath->getFieldPath().tail();
